# pylcars

./: .directory  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FONTS.md  LICENSE  README.md  USAGE.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
pylcars/: __init__.py  colors.py  conditions.py  config.py  enumeration.py  gui.py  lcars.py  orientation.py  sound.py  widgets.py
pylcars/Sounds/: .directory
pylcars/demos/: colors_showcase.py  custom_theme.py  menu.py  simple_window.py  sounds.py  widgets_showcase.py
pylcars/widgets/: block.py  bracket.py  deco.py  menue.py  semicircle.py  separator.py  slider.py  textline.py  updown.py  widgets.py
tests/: __init__.py  conftest.py  test_colors.py  test_conditions.py  test_imports.py  test_orientation.py
